# CloudWeave

./: .gitignore  CODEBUDDY.md  README.zh.md  docker-compose.dev.yml
backend/: pyproject.toml  requirements.txt
backend/application/: __init__.py  dispatch.py  settings.py  sse_views.py  urls.py
backend/conf/: env.example.py
backend/dvadmin/alerts/: apps.py  models.py  tests.py
backend/dvadmin/assets/: apps.py  models.py  tests.py
backend/dvadmin/cloud/: apps.py  models.py  tests.py  urls.py
backend/dvadmin/cloud/fixtures/: init_menu.json  initialize.py
backend/dvadmin/cloud/serializers/: __init__.py  balance_record.py  cloud_platform.py  registrar.py  sync_log.py
backend/dvadmin/cloud/sync/: __init__.py  aliyun.py  base.py  engine.py  huawei.py  meicheng.py  schemas.py  tencent.py
backend/dvadmin/cloud/views/: __init__.py  balance_record.py  cloud_platform.py  registrar.py  sync_log.py
backend/dvadmin/company/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/dvadmin/company/fixtures/: init_menu.json  initialize.py
backend/dvadmin/company/tests/: __init__.py  test_api.py  test_models.py  test_storage.py
backend/dvadmin/icp/: apps.py  models.py  tests.py
backend/dvadmin/mcp_server/: apps.py  models.py  tests.py
backend/dvadmin/ocr_engine/: __init__.py  apps.py  engine.py  license_parser.py  models.py  tasks.py
backend/dvadmin/office/: apps.py  models.py  tests.py
backend/dvadmin/system/: models.py
backend/dvadmin/test_app/: models.py
backend/dvadmin/utils/: crypto.py  fields.py  import_export_mixin.py  models.py
(+73 files in other folders)
