[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "cos-python-sdk-v5>=1.9.44",
    "django>4.2",
    "django-comment-migrate>=0.1.7",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.1",
    "django-ranged-response>=0.2.0",
    "django-restql>=0.18.0",
    "django-simple-captcha>=0.6.3",
    "django-timezone-field>=7.2.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-yasg>=1.21.15",
    "dvadmin3-celery>=3.1.7",
    "gevent>=26.5.0",
    "gunicorn>=26.0.0",
    "mysqlclient>=2.2.8",
    "openpyxl>=3.1.5",
    "oss2>=2.19.1",
    "paddleocr>=3.7.0",
    "paddlepaddle>=3.3.1",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pyinstaller>=6.21.0",
    "pymupdf>=1.28.0",
    "pyparsing>=3.3.2",
    "pypinyin>=0.55.0",
    "requests>=2.34.2",
    "six>=1.17.0",
    "typing-extensions>=4.15.0",
    "tzlocal>=5.4.4",
    "ua-parser>=1.0.2",
    "user-agents>=2.2.0",
    "uvicorn>=0.49.0",
    "whitenoise>=6.12.0",
]
